src/clippercapi/cpp/clippercapi.h

typedef void Paths64;
CAPI long long* Paths64_pathPoints(Paths64* paths, int pathIndex);
CAPI void Paths64_addPath(Paths64* paths, long long* points, int pointCount);
CAPI void Paths64_addPaths64(Paths64* paths, Paths64* other);
CAPI void Clipper_Translate(Paths64* inPaths, long long tx, long long ty, Paths64* outPaths);
CAPI void Clipper_Transform(Paths64* inPaths, int shift, long long m00, long long m10, long long m01, long long m11, long long m02, long long m12, Paths64* outPaths);
CAPI void Clipper_BooleanOp(Paths64* inClosedSubjectPaths, Paths64* inOpenSubjectPaths, Paths64* inClipPaths, int clipType, int fillRule, bool preserveCollinear, bool reverseSolution, Paths64* outClosedPaths, Paths64* outOpenPaths);