src/main/java/com/loadingbyte/cinecred/natives/clippercapi/clippercapi_h.java


    private static class Paths64_pathPoints {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Paths64_pathPoints");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * long long *Paths64_pathPoints(Paths64 *paths, int pathIndex)
     * }
     */
    public static FunctionDescriptor Paths64_pathPoints$descriptor() {
        return Paths64_pathPoints.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * long long *Paths64_pathPoints(Paths64 *paths, int pathIndex)
     * }
     */
    public static MethodHandle Paths64_pathPoints$handle() {
        return Paths64_pathPoints.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * long long *Paths64_pathPoints(Paths64 *paths, int pathIndex)
     * }
     */
    public static MemorySegment Paths64_pathPoints$address() {
        return Paths64_pathPoints.ADDR;
    }

    /**
     * {@snippet lang=c :
     * long long *Paths64_pathPoints(Paths64 *paths, int pathIndex)
     * }
     */
    public static MemorySegment Paths64_pathPoints(MemorySegment paths, int pathIndex) {
        var mh$ = Paths64_pathPoints.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Paths64_pathPoints", paths, pathIndex);
            }
            return (MemorySegment)mh$.invokeExact(paths, pathIndex);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Paths64_addPath {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Paths64_addPath");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void Paths64_addPath(Paths64 *paths, long long *points, int pointCount)
     * }
     */
    public static FunctionDescriptor Paths64_addPath$descriptor() {
        return Paths64_addPath.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void Paths64_addPath(Paths64 *paths, long long *points, int pointCount)
     * }
     */
    public static MethodHandle Paths64_addPath$handle() {
        return Paths64_addPath.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void Paths64_addPath(Paths64 *paths, long long *points, int pointCount)
     * }
     */
    public static MemorySegment Paths64_addPath$address() {
        return Paths64_addPath.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void Paths64_addPath(Paths64 *paths, long long *points, int pointCount)
     * }
     */
    public static void Paths64_addPath(MemorySegment paths, MemorySegment points, int pointCount) {
        var mh$ = Paths64_addPath.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Paths64_addPath", paths, points, pointCount);
            }
            mh$.invokeExact(paths, points, pointCount);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Paths64_addPaths64 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Paths64_addPaths64");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void Paths64_addPaths64(Paths64 *paths, Paths64 *other)
     * }
     */
    public static FunctionDescriptor Paths64_addPaths64$descriptor() {
        return Paths64_addPaths64.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void Paths64_addPaths64(Paths64 *paths, Paths64 *other)
     * }
     */
    public static MethodHandle Paths64_addPaths64$handle() {
        return Paths64_addPaths64.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void Paths64_addPaths64(Paths64 *paths, Paths64 *other)
     * }
     */
    public static MemorySegment Paths64_addPaths64$address() {
        return Paths64_addPaths64.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void Paths64_addPaths64(Paths64 *paths, Paths64 *other)
     * }
     */
    public static void Paths64_addPaths64(MemorySegment paths, MemorySegment other) {
        var mh$ = Paths64_addPaths64.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Paths64_addPaths64", paths, other);
            }
            mh$.invokeExact(paths, other);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Clipper_Translate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Clipper_Translate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void Clipper_Translate(Paths64 *inPaths, long long tx, long long ty, Paths64 *outPaths)
     * }
     */
    public static FunctionDescriptor Clipper_Translate$descriptor() {
        return Clipper_Translate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void Clipper_Translate(Paths64 *inPaths, long long tx, long long ty, Paths64 *outPaths)
     * }
     */
    public static MethodHandle Clipper_Translate$handle() {
        return Clipper_Translate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void Clipper_Translate(Paths64 *inPaths, long long tx, long long ty, Paths64 *outPaths)
     * }
     */
    public static MemorySegment Clipper_Translate$address() {
        return Clipper_Translate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void Clipper_Translate(Paths64 *inPaths, long long tx, long long ty, Paths64 *outPaths)
     * }
     */
    public static void Clipper_Translate(MemorySegment inPaths, long tx, long ty, MemorySegment outPaths) {
        var mh$ = Clipper_Translate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Clipper_Translate", inPaths, tx, ty, outPaths);
            }
            mh$.invokeExact(inPaths, tx, ty, outPaths);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Clipper_Transform {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_INT,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_LONG_LONG,
            clippercapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Clipper_Transform");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void Clipper_Transform(Paths64 *inPaths, int shift, long long m00, long long m10, long long m01, long long m11, long long m02, long long m12, Paths64 *outPaths)
     * }
     */
    public static FunctionDescriptor Clipper_Transform$descriptor() {
        return Clipper_Transform.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void Clipper_Transform(Paths64 *inPaths, int shift, long long m00, long long m10, long long m01, long long m11, long long m02, long long m12, Paths64 *outPaths)
     * }
     */
    public static MethodHandle Clipper_Transform$handle() {
        return Clipper_Transform.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void Clipper_Transform(Paths64 *inPaths, int shift, long long m00, long long m10, long long m01, long long m11, long long m02, long long m12, Paths64 *outPaths)
     * }
     */
    public static MemorySegment Clipper_Transform$address() {
        return Clipper_Transform.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void Clipper_Transform(Paths64 *inPaths, int shift, long long m00, long long m10, long long m01, long long m11, long long m02, long long m12, Paths64 *outPaths)
     * }
     */
    public static void Clipper_Transform(MemorySegment inPaths, int shift, long m00, long m10, long m01, long m11, long m02, long m12, MemorySegment outPaths) {
        var mh$ = Clipper_Transform.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("Clipper_Transform", inPaths, shift, m00, m10, m01, m11, m02, m12, outPaths);
            }
            mh$.invokeExact(inPaths, shift, m00, m10, m01, m11, m02, m12, outPaths);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class Clipper_BooleanOp {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_INT,
            clippercapi_h.C_INT,
            clippercapi_h.C_BOOL,
            clippercapi_h.C_BOOL,
            clippercapi_h.C_POINTER,
            clippercapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("Clipper_BooleanOp");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void Clipper_BooleanOp(Paths64 *inClosedSubjectPaths, Paths64 *inOpenSubjectPaths, Paths64 *inClipPaths, int clipType, int fillRule, _Bool preserveCollinear, _Bool reverseSolution, Paths64 *outClosedPaths, Paths64 *outOpenPaths)
     * }
     */
    public static FunctionDescriptor Clipper_BooleanOp$descriptor() {
        return Clipper_BooleanOp.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void Clipper_BooleanOp(Paths64 *inClosedSubjectPaths, Paths64 *inOpenSubjectPaths, Paths64 *inClipPaths, int clipType, int fillRule, _Bool preserveCollinear, _Bool reverseSolution, Paths64 *outClosedPaths, Paths64 *outOpenPaths)
     * }
     */
    public static MethodHandle Clipper_BooleanOp$handle() {
        return Clipper_BooleanOp.HANDLE;
    }
